--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.assertj:assertj-core:3.20.2"
+	testImplementation "io.rest-assured:rest-assured:3.3.0"
 
 	implementation "joda-time:joda-time:2.2"
 }
